Refactor and enhance chunk handling with PostgreSQL pgvector: - Added static utilities for vector conversion to `VectorAttributeConverter`. - Introduced `ChunkService` to encapsulate similarity search logic. - Updated `PgVectorEmbeddingStore` to delegate search-related tasks to `ChunkService`. - Integrated chunk indexing and metadata handling in `DocumentService`. - Replaced `InMemoryEmbeddingStore` with `PgVectorEmbeddingStore`.